--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "node server/server.js",
     "build": "next build",
-    "start": "NODE_ENV=production node .next/standalone/server.js",
+    "start": "node server/server.js",
     "lint": "next lint"
   },
   "dependencies": {
